[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=1]
[ext_resource path="res://combat/pause/PauseMode.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/pause-window.png" type="Texture" id=3]
[ext_resource path="res://combat/pause/getready.tres" type="DynamicFont" id=4]
[ext_resource path="res://combat/pause/Buttons.gd" type="Script" id=5]

[node name="Pause" type="Control"]
pause_mode = 2
modulate = Color( 1, 1, 1, 0.640902 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 834, 635 )
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="BlackOverlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="pause-window" type="TextureRect" parent="."]
margin_left = 314.721
margin_top = 82.0513
margin_right = 960.721
margin_bottom = 617.051
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -133.237
margin_top = 92.3718
margin_right = 114.763
margin_bottom = 170.372
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Pause"
align = 1
valign = 1
uppercase = true

[node name="GetReady" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 366.597
margin_top = 46.7731
margin_right = 614.597
margin_bottom = 124.773
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 4 )
text = "Continue?"
align = 1
valign = 1
uppercase = true

[node name="Buttons" type="VBoxContainer" parent="."]
editor/display_folded = true
margin_left = 546.334
margin_top = 339.407
margin_right = 728.334
margin_bottom = 518.407
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Continue" type="Button" parent="Buttons"]
margin_right = 182.0
margin_bottom = 57.0
text = "Continue"

[node name="Restart" type="Button" parent="Buttons"]
margin_top = 61.0
margin_right = 182.0
margin_bottom = 118.0
text = "Restart"

[node name="QuitMatch" type="Button" parent="Buttons"]
margin_top = 122.0
margin_right = 182.0
margin_bottom = 179.0
text = "Quit match"

[connection signal="pressed" from="Buttons/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Buttons/QuitMatch" to="." method="_on_QuitMatch_pressed"]
